# FOLOS

./: CMakeLists.txt  README.md
FOLOS/: CMakeLists.txt  Database.cpp  Database.h  SMS_Parser.cpp  SMS_Parser.h  main.cpp
FOLOS/public/: index.html
